Writing concerning anal of concentration distribution and environmental fluctuations

--- a/Trevor_writing/stuff.tex
+++ b/Trevor_writing/stuff.tex
@@ -53,13 +53,13 @@ The constant $K=rS_{M}S_{T}$ is taken to be the proportion of a specific enzyme 
 \end{equation}
 
 
-%\section*{Parameters}
-%\begin{center}
-%\begin{tabular}{ c c c c }
-%\nu$ & $\alpha_{1$} & $\mu$ & $\gamma_{1}$ \\
-%0.28 cm/d & 0.74 d^{-1} & 0.15 cm^3m^{-1}d^{-1} & 0.73 d^{-1}\\
-%\end{tabular}
-%\end{center}
+\section*{Parameters}
+\begin{center}
+\begin{tabular}{ c c c c }
+\nu & \alpha_{1} & \mu & \gamma_{1} \\
+0.28 cm/d & 0.74 d^{-1} & 0.15 cm^3m^{-1}d^{-1} & 0.73 d^{-1}\\
+\end{tabular}
+\end{center}
 
 \section*{Coupled growth and decomposition model}
 To see the dynamics effects of the fungal growth on the rates of decomposition reactions (via enzymes in the fungi) the above models are coupled such that the total biomass found from the growth model will multiply the maximum rate of the Michaelis-Menten reaction equation. The  relationship can be summarized as follows
@@ -84,8 +84,8 @@ To select realistic values for the parameters, we created a representative run o
 The effect of two main parameters were studied for their effect on the growth model's result: the branching rate and the hyphal death rate. These parameters were not agreed upon in the literature so their effect on the model output was evaluated and they were selected from a pool of possible values based on the most likely realistic output. Most results of the growth model were comprised of traveling wave solutions, converging to a uniform distribution in both space and time. This can be thought of a the maximum growth of the fungus into it's total space. The branching rate ($\alpha_{1}$) was found to increase the hyphal density in the end behavior of the solution, with the ending density increasing as $\alpha_{1}$ increases. The hyphal death rate ($\gamma_{1}$) was found to increase the oscillations in time and thus larger $\gamma_{1}$ values would increase the oscillations and the time to reach a given end-behavior. Many of the papers discussing the values of these parameters [Edelstein 1982] [Lin 2016] [Schnepf 2007] [Du 2019] are concerned more with short term dynamics in perfectly ideal conditions. The purposes of this paper is the assess the long term decomposition rates under different conditions, so parameters that can predict long-term behavior, comparable to long term decomposition dynamics described in [Moorhead 2000] [Moorhead 2006] [Moorhead 1991] were selected.
 \subsection*{Decomposition parameters}
 The value for $G$ is interpreted as a rate constant, relating a concentration of relative enzymes to the maximum rate of carbon decomposition. formulation for $S_{M}$ and $S_{T}$ come from [Moorhead 1991] and in said model, a simpler equation is used for the reaction dynamics for decomposition of carbon. Because of this, we cannot use the same rate constant and must base this parameter of agreement with other models or experimental data. The most important aspect we examined for the section of $G$ was the timescale of decomposition to be comparable with that of [Lustenhouwer 2019].
-\subsection*{Representative results}
-As a representative result of the coupled growth and decomposition model, the two were run using the parameters summarized in (parameter table). In the growth model, $\rho$ was found to exibit travelling wave dispersion throughout space, as similarly shown in [Mimura 2000] and [Edelstein 1982]. Due to the simulation only running for a timespan of 3 years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time. The first initial runs were done without the coupling term in the growth equations, so the growth model was assuming an abundance of nutrients and not affected by the decreasing concentration of carbon. Depending on the timescale being simulated, that could be a perfectly valid assumption, as short time scales tended to show little overall decrease in the concentration of holocellulose carbon. However the differences seen in including the nutrient availability term in the growth equations become more apparent as longer time scales are considered. The effects of this can be seen in our results. The overall biomass was also mostly unaffected other than replacing decaying oscillations towards a steady state with a somewhat constantly increasing biomass overtime with a decaying slope. Overall, including the nutrient availability term in the growth equation captures more of the fundamental interaction that this paper is concerned with (that of decomposing wood and ground litter rather than free-growing fungi), so it was included in further analysis. 
+\subsection*{Representative results and model comparison}
+As a representative result of the coupled growth and decomposition model, the two were run using the parameters summarized in (parameter table). In the growth model, $\rho$ was found to exibit travelling wave dispersion throughout space, as similarly shown in [Mimura 2000] and [Edelstein 1982]. Due to the simulation only running for a timespan of 3 years, the decrease in carbon over time looks fairly linear, with slight fluctuations likely due to the fluctuating fungal biomass densities over time. The first initial runs were done without the coupling term in the growth equations, so the growth model was assuming an abundance of nutrients and not affected by the decreasing concentration of carbon. Additional runs were completed in similar parameter conditions, but including the coupling term in the growth equation. The effects of including this term can be seen in (figures biomass-growth-Cterm and biomass-growth-no-Cterm). Physically, the assumption that there is an abundance of nutrience available for fungal growth and that the nutrients does not change over time is more accurate near the beginning of the time span. However the differences seen in including the nutrient availability term in the growth equations become more apparent as longer time scales are considered. Our comparative model results reflect this as early behavior of the two biomasses is identical. Overtime the difference between the two models becomes more prevalent and the behavior of the growth model including the coupling term becomes distinct. The difference in qualitative behavior in the relevant time scale of our model gives validation to the necessity of including the coupling term, as it shows that the assumption of nutrient surplus becomes unrealistic. Additionally, including the nutrient availability term in the growth equation captures more of the fundamental interaction that this paper is concerned with (that of decomposing wood and ground litter rather than free-growing fungi), so it was included in further analysis. There is some unrealistic quantitative disagreement between the two models in their early behavior likely due to parameter adjustments needed  due to adding the coupling term.
 
 
 \section*{Fungal species interaction}
@@ -98,5 +98,21 @@ Where $c_{1,a}$ is a enzyme breakdown efficiency coefficient for the fungal spec
     \frac{dC_{tot}}{dt} = \sum_{i=1}^{n}\frac{dC_{i}}{dt}
 \end{equation}
 Where $n$ is the total number of fungi being simulated. 
+
+\section*{Analysis}
+\subsection*{Distribution of relative concentration of fungi}
+The model allows us to adjust the relative concentrations of each fungi species being simulated. In the model, this is represented with a set of $0<c_{i}\leq 1$ such that $\sum c_{i} = 1$. Each one of these $c_{i}$ multiplies the rates of hyphal density increase and boundary/initial conditions in the growth model. With this metric, the relative concentrations of different fungi species are forced to satisfy the conditions $B_{i}/B_{tot}=c_{i}$ where $B_{i}$ is the biomass of the $i$'th fungi species. This is obviously an unrealistic constraint on the system as the relative concentrations of different fungal species should fluctuate with time as the different species of fungi grow at varying rates. But for the purpose of assessing the effect of biodiversity on the overall decomposition of the substraight, concentration fluctuation would add unneeded complexity to the analysis. \\
+Also considered for this analysis are the competitive rankings of the different fungi species (CITATION NEEDED). The ranking-distribution coefficient, $a$ is then defined to be
+\begin{equation} \label{eq}
+    a = \sum_{i=1}^{n} c_{i}*R_{i}
+\end{equation}
+Where $R_{i}$ s the competitive ranking for the $i$'th fungi species. The ranking-distribution coefficient can be though of as a dot-product in $n$-dimensional space (where $n$ is the number of various fungi species being simulated). So $a$ will be highest when the $n$-dimensional vectors "line-up" in the sense that the distribution of fungi species is closest to the distribution of competitive rankings.\\
+To study the effects of $a$ on the system overall, sample $c$ values had to be chosen. Due to a lack of literature results on simple, constant fungi distributions, arbitrary Gaussian distributions spread out over the different species of fungi were chosen. Because we are mainly concerned with the relation of any given distribution to the competitive rankings, the functions can be viewed as arbitrary or random distributions (because the ordering of fungal species in our Gaussian distribution has no physical meaning). The results of model runs using these various distributions is shown in (figure carbon-decrease-fungi-distribution). To assess the overall effectiveness of a single species distribution, the average carbon decrease over the whole interval was found via the equation $C_avg = \int (C_{0}-C)dt/(\delta t)$ where $C_{0}$ is our initial amount of carbon and $\delta t$ is the total time change over which the carbon decreases. The results of comparing this average carbon decomposed to the $a$ value for the species distribution in question is seen in (figure a-competative-distribution-coef-to-avg-Clost). Several interesting qualitative behaviors arise from the this comparison. Firstly, there is a clear smooth trend between $a$ and the average carbon decomposed up to approximately $a=0.65$. At this point the smooth trend completely vanishes and the data points appear to be randomly distributed in the area. We hypothesize that this critical value of $a$ could be representative of a bifurcation point; however further analysis on the dynamics of these coupled systems interacting would need to be done to investigate this hypothesis further. Additionally we notice that at this critical point, the average carbon decomposed tends to grow significantly. The physical interpretation of this critical point is deeply related to the effectiveness of the competitive rankings as they relate to a biologically diverse system. The results show that beyond a certain point, distributing the biodiversity more closely to the competitive rankings does not have any noticeable effect on the overall effectiveness of the system. \\
+This leads to two possibilities beyond the critical point for the system. One possibility is that optimum biodiversity is based on more complex dynamics than the competitive rankings can assess. The other possibility is that the system behaves in a chaotic or random nature beyond this critical point and no clear metric of biodiversity could be correlated to the effectiveness of a given distribution.
+
+\subsection*{Environmental fluctuations}
+Realistically, the external environment dictates environmental conditions of the system both in short time scales (year fluctuations for example) and long time scales. To study the effects of these short time scale fluctuations, we choose to implement a yearly moisture cycle. The cycle dictates a repeating, yearly pattern of $\psi$ and thus $\nu$. To Incorporated this into the model, $\nu$ and $\psi$ were dynamically allocated over time based on the oscillatory behavior shown in (figure oscillating-psi-nu). Due to time limitations and scarce data on the parameters of these yearly oscillations, only two species of fungi were simulated. A comparison of their respective decomposition contributions with that of similar environmental conditions but static $\nu$ and $\psi$ is shown in (figure oscillating2nonoscillating-psi-contribution). There is no note-worthy new oscillatory motion seen in these results. There is also seen to be a slight increase in the effectiveness of both fungi in the oscillatory case. 
+
+
 
 \end{document}
